@@ -22,6 +22,7 @@ Version 1.0.2 to be released
 - New: Modified CUniqueValidator so that it can correctly validate non-PK attributes when they are being updated (Qiang)
 - New: Added scenario-based massive model attribute assignment (Qiang)
 - New: Added support to specify views in terms of path aliases (Qiang)
+- New: Enhanced getBaseUrl to allow it to return an absolute URL (Qiang)
 
 
 Version 1.0.1 January 4, 2009
